<resources>
    <string name="app_name">TheMovieBible</string>
    <string name="title_fix">Title :</string>
    <string name="title">Titanic</string>
    <string name="year_fix">Year :</string>
    <string name="year">1997</string>
    <string name="genre_fix">Genre :</string>
    <string name="genre">Romance/Drama</string>
    <string name="duration_fix">Duration :</string>
    <string name="duration">3h 50m</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="moviebible">TheMovieBible</string>
    <string name="new_user">New User</string>
    <string name="email">e-mail</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="repeat">Repeat password</string>
    <string name="ok">Submit</string>
    <string name="reg">Register</string>
    <string name="sgn">Sign In</string>
    <string name="login">Login</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share">Share</string>
    <string name="search_error">Empty search...</string>


    <string name="action_sign_in_short">Register</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>