<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie_details.MovieDetailsActivity"
    android:padding="20dp"
    >


    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/title_fix"
        tools:src="@drawable/ic_launcher_background"
    />

    <TextView
        android:id="@+id/title_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/img"
        app:layout_constraintRight_toRightOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/img"
        android:text="@string/title_fix"
    />

    <TextView
        android:id="@+id/year_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_fix"
        app:layout_constraintLeft_toLeftOf="@id/title_fix"
        android:text="@string/year_fix"
    />

    <TextView
        android:id="@+id/duration_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/year_fix"
        app:layout_constraintLeft_toLeftOf="@id/year_fix"
        android:text="@string/duration_fix"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/title_fix"
        app:layout_constraintTop_toTopOf="@id/title_fix"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/title"
        />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/year_fix"
        app:layout_constraintLeft_toLeftOf="@id/title"
        tools:text="@string/year"
        />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/duration_fix"
        app:layout_constraintLeft_toLeftOf="@id/year"
        tools:text="@string/duration"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="@string/share"
        app:rippleColor="@color/white"
        app:icon="@drawable/ic_baseline_share_24"
    />



</androidx.constraintlayout.widget.ConstraintLayout>